# NekoVives

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  NOTICE  README copy.md  README.md  SECURITY.md  TODO.md  clippy.toml  degen_agent_research.docx  docker-compose.yml  install.ps1  install.sh  test_gamma.py  test_poly_auth.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml  scorecard.yml  security.yml  update-packages.yml
Rhai/: Cargo.toml  QUICK_START.md  README.md  RUST_SETUP_GUIDE.md  agent.rs  examples_live_trading.rs  lib.rs  main.rs  polymarket_4min_improved.md  polymarket_api.rs  polymarket_implementation_guide.py  polymarket_trading_bot.py
Skill/: SKILL_USAGE_GUIDE.md  STRATEGY_TEMPLATES.rhai  TRADING_STRATEGY_SKILL.md  strategy_validator.rs
crates/claw-api/: Cargo.toml
crates/evm-trader/: Cargo.toml
crates/evm-trader/src/: lib.rs  rpc.rs  uniswap.rs
crates/market-analyzer/: Cargo.toml
crates/polymarket-trader/: Cargo.toml
crates/polymarket-trader/examples/: auth_check.rs  l1_auth.rs  order_check.rs  place_real_order.rs  verify_pk.rs
crates/polymarket-trader/src/: auth.rs  eip712.rs  error.rs  lib.rs  markets.rs  orders.rs
crates/solana-trader/: Cargo.toml
crates/solana-trader/src/: lib.rs
crates/ton-trader/: Cargo.toml
crates/wallet-manager/: Cargo.toml
crates/wallet-manager/src/: evm.rs  lib.rs  solana.rs  store.rs  ton.rs
docs/: README.md  SUMMARY.fr.md  SUMMARY.ja.md  SUMMARY.md  SUMMARY.ru.md  SUMMARY.zh-CN.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  android-setup.md  arduino-uno-q-setup.md  audit-logging.md  cargo-slicer-speedup.md  channels-reference.md  commands-reference.md  config-reference.md  custom-providers.md  docs-inventory.md  frictionless-security.md  hardware-peripherals-design.md  i18n-coverage.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  network-deployment.md  nextcloud-talk-setup.md  nucleo-setup.md  one-click-bootstrap.md  operations-runbook.md  pr-workflow.md  project-triage-snapshot-2026-02-18.md  providers-reference.md  proxy-agent-playbook.md  release-process.md  resource-limits.md  reviewer-playbook.md  roadmap-stubs.md  sandboxing.md  security-roadmap.md  troubleshooting.md  (+1 more)
docs/getting-started/: README.md  README.vi.md  macos-update-uninstall.md
docs/operations/: README.md
docs/sop/: README.md  connectivity.md  observability.md  syntax.md
docs/structure/: README.md
landing/: Logo.html  index.html
python/: README.md  README.vi.md  pyproject.toml
python/tests/: test_tools.py
python/traderclaw_tools/: __init__.py  __main__.py  agent.py
scripts/: bootstrap.sh  install.sh  monitor_btc_price.rhai  monitor_eth_price.rhai  monitor_polymarket.rhai  monitor_wallet_balance.rhai  recompute_contributor_tiers.sh
scripts/ci/: fetch_actions_data.py
scripts/release/: cut_release_tag.sh
src/: identity.rs  lib.rs  live_feed.rs  main.rs  migration.rs  strategy_runner.rs  util.rs
src/agent/: agent.rs  loop_.rs  mod.rs  prompt.rs  runtime.rs
src/auth/: openai_oauth.rs
src/channels/: mod.rs  poly_commands.rs  telegram.rs
src/config/: mod.rs  schema.rs
src/cost/: tracker.rs
src/cron/: market_job.rs  mod.rs  scheduler.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: api.rs  mod.rs  static_files.rs  ws.rs
src/hardware/: mod.rs
src/heartbeat/: engine.rs
src/integrations/: mod.rs  registry.rs
src/memory/: cli.rs  hygiene.rs  lucid.rs  postgres.rs  snapshot.rs  (+1 more)
strategy/: INDEX.md  claude_code_blueprint.md  claude_code_execution_guide.md  config.example.json  config.json  crypto_4min.rhai  polymarket_5min.rhai  polymarket_crypto_trading_guide.md  quick_start_implementation.md  roadmap_2_weeks.md
tests/: agent_e2e.rs  agent_loop_robustness.rs  channel_routing.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  gemini_fallback_oauth_refresh.rs  hooks_integration.rs  memory_comparison.rs  memory_restart.rs  openai_codex_vision_e2e.rs  provider_resolution.rs  provider_schema.rs  telegram_attachment_fallback.rs  whatsapp_webhook_security.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
wix/: main.wxs
(+132 files in other folders)
