[package]
name = "polymarket-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", default-features = false }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.11"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
toml = "1.0"
tracing = "0.1"
polymarket_client_sdk_v2 = { version = "0.5", features = ["clob"] }

[dev-dependencies]
tempfile = "3"
