[package]
name = "solana-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bs58 = "0.5"
tokio = { version = "1", default-features = false, features = ["rt"] }

# ED25519 signing for Solana transactions
ed25519-dalek = { version = "2", features = ["rand_core"] }
